# img_date_validate

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
notebooks/: sample.ipynb  test.py
src/img_date_validate/: __init__.py
src/img_validator/: validator.py
tests/: test_sample.py
